--- a/pom.xml
+++ b/pom.xml
@@ -195,6 +195,12 @@
                                         <include>**</include>
                                     </includes>
                                 </filter>
+                                <filter>
+                                    <artifact>nz.ac.waikato.cms.weka:weka-stable</artifact>
+                                    <includes>
+                                        <include>**</include>
+                                    </includes>
+                                </filter>
                             </filters>
                             <transformers>
                                 <transformer
