--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,12 @@
             <version>3.6.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.3.2</version>
+        </dependency>
+
         <!-- <dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
