--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,12 @@
                     <include>classifier/*</include>
                 </includes>
             </testResource>
+            <testResource>
+                <directory>src/test/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
+            </testResource>
         </testResources>
         <plugins>
             <plugin>
