Fix cc.redberry.pipe version in pom; add coverall maven plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>cc.redberry</groupId>
             <artifactId>pipe</artifactId>
-            <version>0.9.3-SNAPSHOT</version>
+            <version>0.9.3</version>
         </dependency>
 
         <dependency>
@@ -248,6 +248,15 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>3.0.1</version>
+                <configuration>
+                    <repoToken>9mXXL7dh9cA10amlNHDsaz1q74vLmUwMe</repoToken>
+                </configuration>
             </plugin>
         </plugins>
     </build>
