--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <packaging>jar</packaging>
     <name>OncoMIGEC</name>
 
+    <repositories>
+        <repository>
+            <id>in-project</id>
+            <name>In Project Repo</name>
+            <url>file://${project.basedir}/lib</url>
+        </repository>
+    </repositories>
+
     <parent>
         <groupId>org.sonatype.oss</groupId>
         <artifactId>oss-parent</artifactId>
@@ -17,8 +25,8 @@
     <dependencies>
         <dependency>
             <groupId>com.milaboratory</groupId>
-            <artifactId>milib</artifactId>
-            <version>1.0</version>
+            <artifactId>micommons</artifactId>
+            <version>1.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
