--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass>com.milaboratory.oncomigec.pipeline.MigecCli</mainClass>
+                            <mainClass>com.milaboratory.oncomigec.pipeline.Oncomigec</mainClass>
                             <addDefaultImplementationEntries>
                                 true
                             </addDefaultImplementationEntries>
@@ -210,7 +210,7 @@
                                 </transformer>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.milaboratory.oncomigec.pipeline.MigecCli</mainClass>
+                                    <mainClass>com.milaboratory.oncomigec.pipeline.Oncomigec</mainClass>
                                 </transformer>
                             </transformers>
                             <shadedArtifactAttached>true</shadedArtifactAttached>
