--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,15 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <profiles>
+        <profile>
+            <id>ftest</id>
+            <properties>
+                <testcase.groups>com.milaboratory.oncomigec.FastTests</testcase.groups>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <testResources>
             <testResource>
@@ -140,9 +149,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.10</version>
+                <version>2.13</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>2.13</version>
+                    </dependency>
+                </dependencies>
                 <configuration>
-                    <argLine>-Xmx4G</argLine>
+                    <groups>${testcase.groups}</groups>
                 </configuration>
             </plugin>
 
