--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,11 @@
             <name>In Project Repo</name>
             <url>file://${project.basedir}/lib</url>
         </repository>
+        <repository>
+            <id>central</id>
+            <name>Maven Central</name>
+            <url>http://repo1.maven.org/maven2/</url>
+        </repository>
     </repositories>
 
     <dependencies>
