--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,12 @@
             <url>file://${project.basedir}/lib</url>
         </repository>
         <repository>
-            <id>central</id>
-            <name>Maven Central</name>
-            <url>http://repo1.maven.org/maven2/</url>
+            <id>codehaus-mule-repo</id>
+            <name>codehaus-mule-repo</name>
+            <url>
+                https://repository-master.mulesoft.org/nexus/content/groups/public/
+            </url>
+            <layout>default</layout>
         </repository>
     </repositories>
 
