--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,8 @@
                     </dependency>
                 </dependencies>
                 <configuration>
+                    <!-- Travis build workaround -->
+                    <argLine>-Xms1024m -Xmx2048m</argLine>
                     <groups>${testcase.groups}</groups>
                 </configuration>
             </plugin>
