--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.milaboratory</groupId>
+    <groupId>com.antigenomics</groupId>
     <artifactId>mageri</artifactId>
     <version>1.0.0</version>
     <packaging>jar</packaging>
@@ -99,7 +99,7 @@
         <profile>
             <id>ftest</id>
             <properties>
-                <testcase.groups>com.milaboratory.mageri.FastTests</testcase.groups>
+                <testcase.groups>com.antigenomics.mageri.FastTests</testcase.groups>
             </properties>
         </profile>
     </profiles>
