--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,2 @@
 language: java
-script: mvn test -Dtestcase.groups=ftest,ctest -q
+script: mvn test -Dtestcase.groups=com.antigenomics.mageri.FastTests,com.antigenomics.mageri.ComplexRandomTests -q
